--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-navigation-tabs": "^2.6.2",
     "react-redux": "^7.1.3",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "toggle-switch-react-native": "^2.1.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^7.1.0"
