WIP create list flow

--- a/app.json
+++ b/app.json
@@ -14,7 +14,7 @@
     "icon": "./src/assets/icon.png",
     "splash": {
       "image": "./src/assets/cage.png",
-      "resizeMode": "contain",
+      "resizeMode": "cover",
       "backgroundColor": "#ffffff"
     },
     "updates": {
