--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@use-expo/font": "^2.0.0",
     "arpad": "^1.0.2",
     "expo": "^35.0.0",
+    "expo-constants": "^9.0.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
     "react-native": "https://github.com/expo/react-native/archive/sdk-35.0.0.tar.gz",
