fix padding standings

--- a/app.json
+++ b/app.json
@@ -23,6 +23,10 @@
     "assetBundlePatterns": [
       "**/*"
     ],
+    "androidNavigationBar": {
+      "barStyle": "dark-content",
+      "backgroundColor": "#121212"
+    },
     "ios": {
       "bundleIdentifier": "com.cagematch.cagematch",
       "supportsTablet": true,
