--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
+    "dev": "NODE_ENV=development expo start",
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
