--- a/app.json
+++ b/app.json
@@ -11,7 +11,7 @@
     ],
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./src/assets/cmlogosquare.png",
+    "icon": "./src/assets/cmicon.png",
     "splash": {
       "image": "./src/assets/CageMatchLogo2_03.png",
       "resizeMode": "contain",
