fix bug cage mstp

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Cagematch",
-    "slug": "cage",
+    "name": "CageMatch",
+    "slug": "reactcage",
     "privacy": "public",
     "sdkVersion": "35.0.0",
     "platforms": [
@@ -28,13 +28,13 @@
       "backgroundColor": "#121212"
     },
     "ios": {
-      "bundleIdentifier": "com.cagematch.cage",
+      "bundleIdentifier": "com.cagematch.cagematch",
       "supportsTablet": true,
-      "buildNumber": "1.0.1"
+      "buildNumber": "0.0.14"
     },
     "android": {
-      "package": "com.cagematch.cage",
-      "versionCode": 2
+      "package": "com.cagematch.cagematch",
+      "versionCode": 15
     }
   }
 }
