--- a/app.json
+++ b/app.json
@@ -34,7 +34,8 @@
     },
     "android": {
       "package": "com.cagematch.cage",
-      "versionCode": 2
+      "versionCode": 3,
+      "permissions": []
     }
   }
 }
